fix: whitespace rendering fixes

--- a/src/client/DocumentEditor.css
+++ b/src/client/DocumentEditor.css
@@ -22,4 +22,5 @@
 
 .cm-whitespace {
   color: gray;
+  word-break: break-all;
 }
